<resources>
    <string name="app_name">Дни рождения</string>
    <string name="action_settings">Настройки</string>
    <string name="person_photo">Фото</string>
    <string name="name_label">Имя:</string>
    <string name="name_edit">имя</string>
    <string name="date_label">Дата рождения:</string>
    <string name="phone_label">Номер телефона:</string>
    <string name="save_button_text">Сохранить</string>
    <string name="cancel_button_text">Отмена</string>
    <string name="people_list_fragment">PeopleListFragment</string>
    <string name="people_edit_fragment">PeopleEditFragment</string>
    <string name="search">Поиск</string>
    <string name="sort">Сортировать</string>
    <string name="add">Добавить</string>
    <string name="edit">Редактировать</string>
    <string name="remove">Удалить</string>
    <string name="select_all">Выбрать все</string>
    <string name="sort_by_name_asc">По имени (по возрастанию)</string>
    <string name="sort_by_name_desc">По имени (по убыванию)</string>
    <string name="sort_by_date_asc">Сортировать по дате (по возрастанию)</string>
    <string name="sort_by_date_desc">По дате (по убыванию)</string>
    <string name="name_edit_material">Имя</string>
    <string name="birthday_date_material">Дата рождения</string>
    <string name="phone_material">Номер телефона</string>
    <string name="add_manually">Добавить вручную</string>
    <string name="add_from_contacts">Добавить из контактов</string>
    <string name="select_a_picture">Выберите изображение</string>
    <string name="select_an_action">Выберите действие</string>
    <string name="change">Изменить</string>
    <string name="name_error">Введите имя</string>
    <string name="phone_error">Введите номер телефона</string>
    <string name="date_error">Введите дату рождения</string>
    <string name="not_set">Не установлена</string>
    <string name="channel">periodic_notification_channel_id</string>
    <string name="description">Отправляет уведомления</string>
    <string name="birthday">День Рождения у </string>
    <string name="congratulate">Поздравить</string>
</resources>
