<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="peopleEditViewModel"
            type="com.example.birthday_notifyer.peopleedit.PeopleEditViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/phone_edit"
            android:layout_width="210dp"
            android:layout_height="38dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="phone"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/phone_label"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/name_label"
            android:layout_width="37dp"
            android:layout_height="38dp"
            android:layout_marginTop="16dp"
            android:text="@string/name_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

        <TextView
            android:id="@+id/date_label"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:text="@string/date_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_label" />

        <TextView
            android:id="@+id/phone_label"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginTop="16dp"
            android:text="@string/phone_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_label" />

        <EditText
            android:id="@+id/name_edit"
            android:layout_width="210dp"
            android:layout_height="38dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/name_label"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/date_edit"
            android:layout_width="210dp"
            android:layout_height="38dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:textSize="14sp"
            android:focusable="false"
            android:clickable="true"
            android:inputType="none"
            app:layout_constraintBaseline_toBaselineOf="@+id/date_label"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/save_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/cancel_button_text"
            android:onClick="@{() -> peopleEditViewModel.onCancel()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/photo_view"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_edit"
            tools:srcCompat="@tools:sample/avatars"
            app:placeholderImage="@drawable/ic_camera"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>